<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">SMS Forwarder</string>

    <string name="error_email_invalid">Invalid email</string>
    <string name="error_generic">Unexpected error</string>
    <string name="error_password_invalid">Password length should be at least %s chars</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_submit_button">Login</string>
    <string name="home_add_filter_button">+</string>

    <string name="permission_denied">Permission denied</string>
    <string name="permission_require_title">Notice</string>
    <string name="permission_receive_sms_require_message">To forward incoming SMS, please allow access in your device settings.</string>
    <string name="permission_require_settings">Settings</string>

    <string name="filter_sms_provider_name">SMS Provider Name</string>
    <string name="filter_send_from">Send From</string>
    <string name="filter_sms_template">SMS Template</string>
    <string name="filter_forward_to">Forward To</string>
    <string name="filter_email">Email</string>
    <string name="filter_slack_channel">Slack Channel</string>
    <string name="filter_submit_button">Submit</string>
    <string name="filter_save_success">Saved!</string>

    <string name="menu_all_filters">All Filters</string>
    <string name="menu_filter_management">Filter Management</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_add_filter">Add Filter</string>
</resources>
