<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="co.nimblehq.smsforwarder.ui.screens.login.LoginFragment"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_allFiltersFragment"
            app:destination="@id/allFiltersFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/allFiltersFragment"
        android:name="co.nimblehq.smsforwarder.ui.screens.filter.AllFiltersFragment"
        android:label="@string/menu_all_filters"
        tools:layout="@layout/fragment_all_filters">

        <action
            android:id="@+id/action_allFiltersFragment_to_filterManagerFragment"
            app:destination="@id/filterManagerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/filterManagerFragment"
        android:name="co.nimblehq.smsforwarder.ui.screens.filter.manager.FilterManagerFragment"
        android:label="@string/menu_filter_management"
        tools:layout="@layout/fragment_filter_manager" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="co.nimblehq.smsforwarder.ui.screens.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_filter_manager" />

</navigation>
