<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:padding="@dimen/default_margin_24">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/tilLoginUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_sms" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTextInputLayout"
        android:id="@+id/tilLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_16"
        android:hint="@string/login_username"
        app:layout_constraintBottom_toTopOf="@id/tilLoginPassword"
        app:layout_constraintTop_toBottomOf="@id/ivLoginLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTextInputLayout"
        android:id="@+id/tilLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_24"
        android:hint="@string/login_password"
        app:layout_constraintBottom_toTopOf="@id/btLogin"
        app:layout_constraintTop_toBottomOf="@id/tilLoginUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        style="@style/AppButton"
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_40"
        android:text="@string/login_submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
